# polaris

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
config/: polaris.toml  root.hints
src/: app.rs  config.rs  dns.rs  filter.rs  handlers.rs  lib.rs  main.rs  readiness.rs  resolver.rs  state.rs
