[package]
name = "polaris"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Polaris: lightweight pure-Rust DoH resolver"

[dependencies]
anyhow = "1"
arc-swap = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hickory-proto = { version = "0.25", features = ["dnssec-ring", "text-parsing", "serde"] }
hickory-recursor = { version = "0.25", features = ["dnssec-ring"] }
http = "1"
idna = "1"
ipnet = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["timeout", "limit", "util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[dev-dependencies]
axum-test = "17"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
